# picolibrary

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
source/: CMakeLists.txt  picolibrary.cc
source/picolibrary/: adafruit.cc  adc.cc  algorithm.cc  array.cc  asynchronous_serial.cc  bit_manipulation.cc  circular_buffer.cc  crc.cc  debounce.cc  error.cc  event.cc  fatal_error.cc  fixed_capacity_vector.cc  fixed_size_array.cc  format.cc  gpio.cc  hsm.cc  i2c.cc  indicator.cc  interrupt.cc  interrupt_guard.cc  ip.cc  ipv4.cc  iterator.cc  mac_address.cc  microchip.cc  peripheral.cc  postcondition.cc  precondition.cc  register.cc  result.cc  rgb.cc  rom.cc  spi.cc  state_machine.cc  stream.cc  testing.cc  texas_instruments.cc  utility.cc  vector.cc  (+3 more)
source/picolibrary/adafruit/: pid781.cc
source/picolibrary/asynchronous_serial/: stream.cc
source/picolibrary/ip/: network_stack.cc  tcp.cc  udp.cc
source/picolibrary/microchip/: mcp23008.cc  mcp23s08.cc  mcp23x08.cc  mcp3008.cc
source/picolibrary/testing/: automated.cc  interactive.cc  unit.cc
source/picolibrary/testing/automated/: adafruit.cc  adc.cc  asynchronous_serial.cc  crc.cc  error.cc  event.cc  fatal_error.cc  gpio.cc  i2c.cc  indicator.cc  interrupt.cc  ip.cc  ipv4.cc  mac_address.cc  microchip.cc  mock_handle.cc  random.cc  rgb.cc  spi.cc  stream.cc  texas_instruments.cc  wiznet.cc
source/picolibrary/testing/automated/adafruit/: pid781.cc
source/picolibrary/testing/automated/ip/: network_stack.cc  tcp.cc  udp.cc
source/picolibrary/testing/automated/microchip/: mcp23008.cc  mcp23s08.cc  mcp23x08.cc  mcp3008.cc
source/picolibrary/testing/automated/texas_instruments/: tca9548a.cc
source/picolibrary/testing/automated/wiznet/: w5500.cc
source/picolibrary/testing/interactive/: adafruit.cc  adc.cc  asynchronous_serial.cc  gpio.cc  i2c.cc  ip.cc  microchip.cc  spi.cc  stream.cc  texas_instruments.cc  wiznet.cc
source/picolibrary/testing/interactive/adafruit/: pid781.cc
source/picolibrary/testing/interactive/asynchronous_serial/: stream.cc
source/picolibrary/testing/interactive/ip/: tcp.cc  udp.cc
source/picolibrary/testing/interactive/microchip/: mcp23008.cc  mcp23s08.cc  mcp23x08.cc  mcp3008.cc
source/picolibrary/testing/unit/: adc.cc  asynchronous_serial.cc  crc.cc  error.cc  event.cc  fatal_error.cc  functor.cc  gpio.cc  hsm.cc  i2c.cc  indicator.cc  interrupt.cc  ip.cc  ipv4.cc  mac_address.cc  microchip.cc  mock_handle.cc  random.cc  spi.cc  stream.cc  wiznet.cc
source/picolibrary/testing/unit/ip/: tcp.cc  (+1 more)
source/picolibrary/texas_instruments/: tca9548a.cc
source/picolibrary/wiznet/: w5500.cc
source/picolibrary/wiznet/w5500/: ip.cc  keys.cc  network_stack.cc
test/automated/picolibrary/: CMakeLists.txt
test/automated/picolibrary/adafruit/: CMakeLists.txt
test/automated/picolibrary/adc/: CMakeLists.txt
test/automated/picolibrary/algorithm/: CMakeLists.txt  main.cc
test/automated/picolibrary/asynchronous_serial/: CMakeLists.txt
test/automated/picolibrary/bit_manipulation/: CMakeLists.txt  main.cc
test/automated/picolibrary/crc/: CMakeLists.txt  main.cc
test/automated/picolibrary/debounce/: CMakeLists.txt
test/automated/picolibrary/error_code/: CMakeLists.txt  main.cc
test/automated/picolibrary/event/: CMakeLists.txt  main.cc
test/automated/picolibrary/format/: CMakeLists.txt
test/automated/picolibrary/generic_error/: CMakeLists.txt  main.cc
test/automated/picolibrary/generic_error_category/: CMakeLists.txt  main.cc
test/automated/picolibrary/gpio/: CMakeLists.txt
test/automated/picolibrary/hsm/: CMakeLists.txt  main.cc
test/automated/picolibrary/i2c/: CMakeLists.txt  main.cc
test/automated/picolibrary/indicator/: CMakeLists.txt
test/automated/picolibrary/interrupt/: CMakeLists.txt
test/automated/picolibrary/ip/: CMakeLists.txt
test/automated/picolibrary/ipv4/: CMakeLists.txt
test/automated/picolibrary/mac_address/: CMakeLists.txt  main.cc
test/automated/picolibrary/microchip/: CMakeLists.txt
test/automated/picolibrary/output_stream/: CMakeLists.txt  main.cc
test/automated/picolibrary/reliable_output_stream/: CMakeLists.txt  main.cc
test/automated/picolibrary/reliable_stream/: CMakeLists.txt  main.cc
test/automated/picolibrary/reliable_stream_buffer/: CMakeLists.txt  main.cc
test/automated/picolibrary/spi/: CMakeLists.txt
test/automated/picolibrary/state_machine/: CMakeLists.txt  main.cc
test/automated/picolibrary/stream/: CMakeLists.txt  main.cc
test/automated/picolibrary/stream_buffer/: CMakeLists.txt  main.cc
test/automated/picolibrary/texas_instruments/: CMakeLists.txt
test/automated/picolibrary/wiznet/: CMakeLists.txt
test/unit/picolibrary/: CMakeLists.txt
test/unit/picolibrary/adc/: CMakeLists.txt
test/unit/picolibrary/algorithm/: CMakeLists.txt  main.cc
test/unit/picolibrary/asynchronous_serial/: CMakeLists.txt
test/unit/picolibrary/bit_manipulation/: CMakeLists.txt  main.cc
test/unit/picolibrary/crc/: CMakeLists.txt  main.cc
test/unit/picolibrary/error_code/: CMakeLists.txt  main.cc
test/unit/picolibrary/event/: CMakeLists.txt  main.cc
test/unit/picolibrary/format/: CMakeLists.txt
test/unit/picolibrary/generic_error/: CMakeLists.txt  main.cc
test/unit/picolibrary/generic_error_category/: CMakeLists.txt  main.cc
test/unit/picolibrary/gpio/: CMakeLists.txt
test/unit/picolibrary/hsm/: CMakeLists.txt
test/unit/picolibrary/i2c/: CMakeLists.txt  main.cc
test/unit/picolibrary/indicator/: CMakeLists.txt
test/unit/picolibrary/interrupt/: CMakeLists.txt
test/unit/picolibrary/ip/: CMakeLists.txt
test/unit/picolibrary/ipv4/: CMakeLists.txt
test/unit/picolibrary/mac_address/: CMakeLists.txt  main.cc
test/unit/picolibrary/microchip/: CMakeLists.txt
test/unit/picolibrary/output_stream/: CMakeLists.txt  main.cc
test/unit/picolibrary/spi/: CMakeLists.txt
test/unit/picolibrary/stream/: CMakeLists.txt  main.cc
test/unit/picolibrary/stream_buffer/: CMakeLists.txt  main.cc
test/unit/picolibrary/wiznet/: CMakeLists.txt
(+539 files in other folders)
